Exercicios\exe 001\index.html

--- a/Exercicios/exe 001/index.html
+++ b/Exercicios/exe 001/index.html
@@ -8,6 +8,9 @@
 <body>
 
     <h1> Olá,Mundo! </h1>
+    <hr>
     <p>Esse é o primeiro documento HTML que estou fazendo curso 2020 </p>
+    
+    <p>Curso novo 2020 HTML 5 com Gustavo Guanabara </p>
 </body>
 </html>
