Exercicios\exe002\paragrafo.html Atuaizado
Atualizado Exercicios\exe002\paragrafo.html

--- a/Exercicios/exe002/paragrafo.html
+++ b/Exercicios/exe002/paragrafo.html
@@ -9,9 +9,9 @@
     <h1>Paragrafo e Quebra de Linha </h1>
     <hr>
     <p>Voce pode escrever um paragrafo de qualquer jeito 
-        Basta colocar o texto entre as marcações ou tags  ]
-       p e / p . 
+        Basta colocar o texto entre as marcações ou tags 
+       &lt;p&gt; e &lt;/p&gt; . 
     </p>
-
+    <p>Voce tambem pode fazer quebra de linhas so basta ulizar as tags &lt;br&gt;. <br> Assim voce pode quebrar de uma linha para outra. <br> Assim voce pode criar paragrafos com o linebreak. <br> Assim facilitando muito o seu trabalho utilizando as tags .
 </body>
 </html>
